Simplify: step 2: more refactorings, removed continous gameplay, separated templates, removed majority of tests

--- a/BedeLotteryConsole/BedeLotteryConsole.csproj
+++ b/BedeLotteryConsole/BedeLotteryConsole.csproj
@@ -21,7 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Templates\ConsoleTemplate.txt" />
+    <EmbeddedResource Include="Templates\Introduction.tmpl" />
+    <EmbeddedResource Include="Templates\Results.tmpl" />
   </ItemGroup>
 
   <ItemGroup>
