--- a/BedeLotteryConsole/appsettings.json
+++ b/BedeLotteryConsole/appsettings.json
@@ -3,7 +3,6 @@
     "InitialBalance": 10.0,
     "TicketPrice": 1.0,
     "MaxTicketsPerPlayers": 10,
-    "MaxPlayersPerGame": 15,
-    "Currency": "$"
+    "MaxPlayersPerGame": 15
   }
 }
