--- a/BedeLotteryConsole/appsettings.json
+++ b/BedeLotteryConsole/appsettings.json
@@ -3,6 +3,7 @@
     "InitialBalance": 10.0,
     "TicketPrice": 1.0,
     "MaxTicketsPerPlayers": 10,
-    "MaxPlayersPerGame": 15
+    "MaxPlayersPerGame": 15,
+    "SuppressOutput": false
   }
 }
