--- a/BedeLotteryConsole/appsettings.json
+++ b/BedeLotteryConsole/appsettings.json
@@ -4,6 +4,6 @@
     "TicketPrice": 1.0,
     "MaxTicketsPerPlayers": 10,
     "MaxPlayersPerGame": 15,
-    "Currency": "$"
+    "SuppressOutput": false
   }
 }
